--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+ @import url('https://fonts.googleapis.com/css2?family=Fauna+One&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 .minty {
-display="block";
+display:block;
 background-color:#3EB489;
 }
 
